--- a/mybatisapp/src/main/resources/application.properties
+++ b/mybatisapp/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=mybatisapp
 
 # MySQL8 Connect Developement
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/phonebook_db?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/phonebook_db?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=phonebook_user
 spring.datasource.password=sangbong3!
 
