--- a/mybatisapp/src/main/resources/application.properties
+++ b/mybatisapp/src/main/resources/application.properties
@@ -4,9 +4,15 @@ spring.application.name=mybatisapp
 
 # MySQL8 Connect Developement
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/phonebook_db?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:log4jdbc:mysql://192.168.0.2:3306/phonebook_db?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=phonebook_user
 spring.datasource.password=sangbong3!
+
+# MySQL8 Connect Developement
+spring.datasource.test.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.test.url=jdbc:log4jdbc:mysql://localhost:3306/phonebook_db?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.test.username=phonebook_user
+spring.datasource.test.password=sangbong3!
 
 
 # mybatis
